# XAI

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/: README.md
configs/personas/: data_scientist.md  operator.md  regulator.md
data/: README.md
docs/: IMPLEMENTATION_PLAN.md  data_reality.md  decision_log.md  handoff-2026-07-07-phase4.md  handoff-2026-07-07.md  kb_authoring_log.md  power_grid_crash_course.md
docs/notes/: adr-001-knowledge-graph-persona-architecture.md  phase3_ingest_findings.md
docs/proposal/: Jiakai_Tang ECE 2500 Progress Report.docx
experiments/results/: README.md
experiments/scenarios/: README.md  consequences_RTU-1.json  consequences_RTU-2.json  consequences_RTU-3.json  consequences_RTU-4.json  cpas_protocol.md  scenario_01.json  scenario_02.json  scenario_03.json  scenario_04.json  scenario_05.json  scenario_06.json  scenario_07.json  scenario_08.json  scenario_09.json  scenario_10.json  scenario_11.json  scenario_12.json  scenario_13.json  scenario_14.json  scenario_15.json
knowledge_base/: README.md  entities.yaml
knowledge_base/attack_taxonomy/: attacks.md
knowledge_base/feature_dictionary/: flow_features.md
knowledge_base/physics/: power_flow_basics.md
knowledge_base/playbooks/: operator_response.md
knowledge_base/regulatory_compliance/: compliance.md
knowledge_base/topology/: ieee14_grid.md  ip_device_map.md
references/: SANDI-2024_dataset_README.md  SOURCES.md
scripts/: check_kb.py  export_topology.py  kb_extract.py  make_fact_sheets.py  seed_graph.py  simulate_consequences.py
(+23 files in other folders)
